inside the div id:parent-id, nest the accordion buttons

--- a/faq.html
+++ b/faq.html
@@ -101,7 +101,35 @@
 
                 <div class="collapse-containercontainer row">
                     <div class="col-lg-4 text-start" id="parent-btn">
+                        <button class="btn faq-btn" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapse-definition" aria-expanded="false"
+                                aria-controls="#collapse-definition" data-parent="#parent-btn">
+                                What is hydroponics?
+                            </button>
 
+                            <button class="btn faq-btn" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapse-types" aria-expanded="false" aria-controls="#collapse-types"
+                                data-parent="#parent-btn">
+                                What are the different types of hydroponics system?
+                            </button>
+
+                            <button class="btn faq-btn" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapse-vs" aria-expanded="false" aria-controls="#collapse-vs"
+                                data-parent="#parent-btn">
+                                Difference of hydroponics vs other farming methods
+                            </button>
+
+                            <button class="btn faq-btn" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapse-other" aria-expanded="false" aria-controls="#collapse-other"
+                                data-parent="#parent-btn">
+                                Other non-traditional farming methods:
+                            </button>
+
+                            <button class="btn faq-btn" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapse-myths" aria-expanded="false" aria-controls="#collapse-myths"
+                                data-parent="#parent-btn">Common myths about
+                                hydroponics:
+                            </button>
                     </div>
                 </div>
             </div>
