add expanded text for collapse-types. add styling for unorder list

--- a/faq.html
+++ b/faq.html
@@ -103,34 +103,34 @@
                 <div class="collapse-containercontainer row">
                     <div class="col-lg-4 text-start" id="parent-btn">
                         <button class="btn faq-btn" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#collapse-definition" aria-expanded="false"
-                                aria-controls="#collapse-definition" data-parent="#parent-btn">
-                                What is hydroponics?
-                            </button>
+                            data-bs-target="#collapse-definition" aria-expanded="false"
+                            aria-controls="#collapse-definition" data-parent="#parent-btn">
+                            What is hydroponics?
+                        </button>
 
-                            <button class="btn faq-btn" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#collapse-types" aria-expanded="false" aria-controls="#collapse-types"
-                                data-parent="#parent-btn">
-                                What are the different types of hydroponics system?
-                            </button>
+                        <button class="btn faq-btn" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapse-types" aria-expanded="false" aria-controls="#collapse-types"
+                            data-parent="#parent-btn">
+                            What are the different types of hydroponics system?
+                        </button>
 
-                            <button class="btn faq-btn" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#collapse-vs" aria-expanded="false" aria-controls="#collapse-vs"
-                                data-parent="#parent-btn">
-                                Difference of hydroponics vs other farming methods
-                            </button>
+                        <button class="btn faq-btn" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapse-vs" aria-expanded="false" aria-controls="#collapse-vs"
+                            data-parent="#parent-btn">
+                            Difference of hydroponics vs other farming methods
+                        </button>
 
-                            <button class="btn faq-btn" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#collapse-other" aria-expanded="false" aria-controls="#collapse-other"
-                                data-parent="#parent-btn">
-                                Other non-traditional farming methods:
-                            </button>
+                        <button class="btn faq-btn" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapse-other" aria-expanded="false" aria-controls="#collapse-other"
+                            data-parent="#parent-btn">
+                            Other non-traditional farming methods:
+                        </button>
 
-                            <button class="btn faq-btn" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#collapse-myths" aria-expanded="false" aria-controls="#collapse-myths"
-                                data-parent="#parent-btn">Common myths about
-                                hydroponics:
-                            </button>
+                        <button class="btn faq-btn" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapse-myths" aria-expanded="false" aria-controls="#collapse-myths"
+                            data-parent="#parent-btn">Common myths about
+                            hydroponics:
+                        </button>
                     </div>
 
                     <!-- accordion expanded -->
@@ -142,11 +142,23 @@
                             </div>
                         </div>
 
+                        <div class="collapse" id="collapse-types">
+                            <div class="card card-body">
+                                <ul style="list-style-position: inside; list-style-type: none;">
+                                    <!--transfer this style in css-->
+                                    <li>Wicking</li>
+                                    <li>Deep Water Culture (DWC)</li>
+                                    <li> Nutrient Film Technique (NFT)</li>
+                                    <li>Ebb and Flow</li>
+                                </ul>
+                                <!-- <P>Click on the link to find out more about each type of hydroponics system</P> -->
+                            </div>
+
+                        </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="push"></div>
+                <div class="push"></div>
         </main>
 
         <footer>
