add expanded text for collapse-vs. add styling for unorder list

--- a/faq.html
+++ b/faq.html
@@ -155,6 +155,24 @@
                             </div>
 
                         </div>
+
+                        <div class="collapse" id="collapse-vs">
+                            <div class="card card-body">
+                                <ul style="list-style-position: inside; list-style-type: none;">
+                                    <li>When plants are grown in a hydroponic system, they grow at a rate of 30% -
+                                        50% faster compared to traditional farming methods.</li>
+                                    <li>Because water in a hydroponic system is captured and reused, the systems use
+                                        less water — as much as 10 times less water — than traditional field crop
+                                        watering methods.</li>
+                                    <li>Hydroponics saves space. Crops can be planted very close to one another with
+                                        a hydroponics system since root growth is limited.</li>
+                                    <li>A hydroponic system grows nutrient-dense produce in greater quantities. In
+                                        fact, we've found that our hydroponic vertical farms can grow about 240
+                                        times more than traditional farming methods.</li>
+                                </ul>
+                            </div>
+                        </div>
+                        
                     </div>
                 </div>
 
