add expanded text for collapse-other

--- a/faq.html
+++ b/faq.html
@@ -172,6 +172,16 @@
                                 </ul>
                             </div>
                         </div>
+
+                        <div class="collapse" id="collapse-other">
+                            <div class="card card-body">
+                                <ul style="list-style-position: inside; list-style-type: none;">
+                                    <li>Aeroponics</li>
+                                    <li>Aquaponics</li>
+                                    <li>Monoculture</li>
+                                </ul>
+                            </div>
+                        </div>
                         
                     </div>
                 </div>
