--- a/faq.html
+++ b/faq.html
@@ -182,6 +182,33 @@
                                 </ul>
                             </div>
                         </div>
+
+                        <div class="collapse" id="collapse-myths">
+                            <div class="card card-body">
+                                <ul style="list-style-position: inside; list-style-type: none;">
+                                    <li><b>You will need a lot of space to start:</b>
+                                        Space is not an obstacle in your path of growing healthy food. You can even
+                                        set up your hydroponics system vertically to save space.</li>
+                                    <li><b>It is expensive to start:</b>
+                                        You don't need to buy new materials to set up a hydroponics system. You can
+                                        use old pvc pipes, wood, and food container to start. You can find in the
+                                        #PAGE some ways to start without breaking your pocket.</li>
+                                    <li><b>The chemicals are harmful:</b>The nutrients used in hydroponics are safe
+                                        to use. Because we are not using soil to grow the plant, pests can't reach
+                                        our plant. That means, your favorite fruit or vegetable are free from
+                                        harmful chemicals that are usually found in pesticides.</li>
+                                    <li><b>Plants that grew in hydroponics are not healthy:</b>Technically,
+                                        hydroponic plants can be more nutritious. One of the main reasons for this
+                                        is that you have complete control over your plants' nutrients. You can
+                                        tailor the water and nutrient mixture to meet the specific needs of your
+                                        plants, which can result in plants that are healthier and more
+                                        nutrient-dense.</li>
+                                    <li><b>It is difficult to maintain:</b>I won't try to deceive you by saying it
+                                        is easy to set-up and maintain especially if you don't know where to start.
+                                        Don't fret because we are here to help!</li>
+                                </ul>
+                            </div>
+                        </div>
                         
                     </div>
                 </div>
