--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             <a class="nav-link" aria-current="page" href="#top">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">FAQs</a>
+                            <a class="nav-link" href="faq.html">FAQs</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Events</a>
