create new section with a div and h2, h5 element

--- a/events.html
+++ b/events.html
@@ -82,9 +82,18 @@
         </nav>
 
         <main>
-            
+            <section>
+                <div class="events-heading-container">
+                    <div class="sections-heading">
+                        <h2>hydrofarm <span>events</span></h2>
+                        <h5>We conduct quarterly events to bring awareness and train hydroponics enthusiasts.</h5>
+                    </div>
+                </div>
 
-                <div class="push"></div>
+            </section>
+
+
+            <div class="push"></div>
         </main>
 
         <footer>
