--- a/events.html
+++ b/events.html
@@ -91,7 +91,12 @@
                 </div>
 
                 <div class="events-section container">
-                    
+                    <h3 class="events-header">Farm group tours</h3>
+
+                    <div class="row">
+                        
+                    </div>
+
                 </div>
 
             </section>
