--- a/events.html
+++ b/events.html
@@ -94,7 +94,10 @@
                     <h3 class="events-header">Farm group tours</h3>
 
                     <div class="row">
-                        
+                        <div class="col-lg-12 events-group tour-container">
+                            <img class="float-end" src="Images/amhydro-greenhouse-growers-courses.jpg" alt="">
+                        </div>
+
                     </div>
 
                 </div>
