--- a/events.html
+++ b/events.html
@@ -95,7 +95,7 @@
 
                     <div class="row">
                         <div class="col-lg-12 events-group tour-container">
-                            <img class="float-end" src="Images/amhydro-greenhouse-growers-courses.jpg" alt="">
+                            <img class="float-end" src="images/Tour.jpg" alt="tour-image">
                         </div>
 
                     </div>
