create a p element below the img

--- a/events.html
+++ b/events.html
@@ -96,6 +96,12 @@
                     <div class="row">
                         <div class="col-lg-12 events-group tour-container">
                             <img class="float-end" src="images/Tour.jpg" alt="tour-image">
+                            <p class="text-left">
+                                We organize and accept farm tour reservations for local NGOs, office peers,
+                                family and anyone who want to visit our sites so you can see first-hand how we set up
+                                and
+                                maintain the different types of hydroponics system in our farm.
+                            </p>
                         </div>
 
                     </div>
