fill the page with some text and some lorem ipsum

--- a/events.html
+++ b/events.html
@@ -102,7 +102,75 @@
                                 and
                                 maintain the different types of hydroponics system in our farm.
                             </p>
+
+                            <p>
+                                We also invite resource speakers - experts in the field and hydroponics enthusiasts like
+                                you
+                                - to give inisghtful talks about their experience in hydroponics and to share their best
+                                practices in getting healthy yield of produce. There's also time for questions, so
+                                please be
+                                sure to come prepared with questions for the speaker, too.
+                            </p>
+
+                            <p>
+                                Our on-site experts are always rady to answer your questions regarding our work and the
+                                issues surrounding farms and nature
+                            </p>
+
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                incididunt ut
+                                labore et dolore magna aliqua. Semper feugiat nibh sed pulvinar proin. Nullam ac tortor
+                                vitae purus faucibus. Id eu nisl nunc mi ipsum faucibus vitae aliquet nec. Dolor sit
+                                amet
+                                consectetur adipiscing elit ut aliquam purus. Gravida dictum fusce ut placerat orci
+                                nulla
+                                pellentesque dignissim. Hendrerit dolor magna eget est lorem. Vitae congue eu consequat
+                                ac
+                                felis donec et odio. Orci eu lobortis elementum nibh tellus molestie nunc non. Lorem
+                                dolor
+                                sed viverra ipsum nunc aliquet bibendum. Nisl tincidunt eget nullam non. In est ante in
+                                nibh
+                                mauris cursus. Viverra ipsum nunc aliquet bibendum enim facilisis. Convallis a cras
+                                semper
+                                auctor neque. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Odio ut sem
+                                nulla pharetra diam. Sed viverra tellus in hac habitasse platea dictumst vestibulum.
+                                Elit
+                                sed vulputate mi sit amet mauris. Tempus urna et pharetra pharetra massa massa ultricies
+                                mi.
+                                Eleifend mi in nulla posuere sollicitudin aliquam. Congue mauris rhoncus aenean vel elit
+                                scelerisque. Sit amet venenatis urna cursus eget nunc scelerisque viverra mauris. Risus
+                                commodo viverra maecenas accumsan lacus vel. Neque aliquam vestibulum morbi blandit
+                                cursus
+                                risus at ultrices. Fringilla phasellus faucibus scelerisque eleifend. Diam donec
+                                adipiscing
+                                tristique risus nec feugiat in fermentum. Arcu dictum varius duis at. Magna fringilla
+                                urna
+                                porttitor rhoncus dolor purus non enim. In pellentesque massa placerat duis. Aliquet
+                                eget
+                                sit amet tellus cras adipiscing. Quis vel eros donec ac odio tempor. Ut sem viverra
+                                aliquet
+                                eget. Scelerisque mauris pellentesque pulvinar pellentesque. Phasellus egestas tellus
+                                rutrum
+                                tellus pellentesque eu tincidunt.
+                            </p>
+
+                            <p>
+                                Ante in nibh mauris cursus mattis molestie a. Tortor condimentum lacinia quis vel eros
+                                donec.
+                                In nulla posuere sollicitudin aliquam ultrices sagittis orci. Mi ipsum faucibus vitae
+                                aliquet nec ullamcorper sit. Integer enim neque volutpat ac tincidunt vitae semper. Dui
+                                nunc
+                                mattis enim ut tellus. Eget egestas purus viverra accumsan in nisl. Sed viverra ipsum
+                                nunc
+                                aliquet bibendum enim facilisis gravida. Urna nunc id cursus metus aliquam eleifend mi
+                                in
+                                nulla. Ac auctor augue mauris augue neque gravida in. Fringilla ut morbi tincidunt augue
+                                interdum velit euismod. Turpis tincidunt id aliquet risus feugiat in ante.
+                            </p>
                         </div>
+
+                        
 
                     </div>
 
