create another div with an h3 element

--- a/events.html
+++ b/events.html
@@ -170,7 +170,11 @@
                             </p>
                         </div>
 
-                        
+                        <div class="events-group seminar-container">
+                            <h3 class="events-header">Seminars</h3>
+                        </div>
+
+
 
                     </div>
 
