add text and image

--- a/events.html
+++ b/events.html
@@ -172,6 +172,103 @@
 
                         <div class="events-group seminar-container">
                             <h3 class="events-header">Seminars</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                                ut
+                                labore et dolore magna aliqua. Semper feugiat nibh sed pulvinar proin. Nullam ac tortor
+                                vitae purus faucibus. Id eu nisl nunc mi ipsum faucibus vitae aliquet nec. Dolor sit
+                                amet
+                                consectetur adipiscing elit ut aliquam purus. Gravida dictum fusce ut placerat orci
+                                nulla
+                                pellentesque dignissim. Hendrerit dolor magna eget est lorem. Vitae congue eu consequat
+                                ac
+                                felis donec et odio. Orci eu lobortis elementum nibh tellus molestie nunc non. Lorem
+                                dolor
+                                sed viverra ipsum nunc aliquet bibendum. Nisl tincidunt eget nullam non. In est ante in
+                                nibh
+                                mauris cursus. Viverra ipsum nunc aliquet bibendum enim facilisis. Convallis a cras
+                                semper
+                                auctor neque. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Odio ut sem
+                                nulla pharetra diam. Sed viverra tellus in hac habitasse platea dictumst vestibulum.
+                                Elit
+                                sed vulputate mi sit amet mauris. Tempus urna et pharetra pharetra massa massa ultricies
+                                mi.
+                                Eleifend mi in nulla posuere sollicitudin aliquam. Congue mauris rhoncus aenean vel elit
+                                scelerisque. Sit amet venenatis urna cursus eget nunc scelerisque viverra mauris. Risus
+                                commodo viverra maecenas accumsan lacus vel. Neque aliquam vestibulum morbi blandit
+                                cursus
+                                risus at ultrices. Fringilla phasellus faucibus scelerisque eleifend. Diam donec
+                                adipiscing
+                                tristique risus nec feugiat in fermentum. Arcu dictum varius duis at. Magna fringilla
+                                urna
+                                porttitor rhoncus dolor purus non enim. In pellentesque massa placerat duis. Aliquet
+                                eget
+                                sit amet tellus cras adipiscing. Quis vel eros donec ac odio tempor. Ut sem viverra
+                                aliquet
+                                eget. Scelerisque mauris pellentesque pulvinar pellentesque. Phasellus egestas tellus
+                                rutrum
+                                tellus pellentesque eu tincidunt.
+                            </p>
+
+                            <p>
+                                We also invite resource speakers - experts in the field and hydroponics enthusiasts like
+                                you
+                                - to give inisghtful talks about their experience in hydroponics and to share their best
+                                practices in getting healthy yield of produce. There's also time for questions, so
+                                please be
+                                sure to come prepared with questions for the speaker, too.
+                            </p>
+
+                            <p>
+                                Lobortis feugiat vivamus at augue eget arcu dictum varius duis. Augue interdum velit
+                                euismod
+                                in pellentesque. Velit aliquet sagittis id consectetur purus ut faucibus. Erat velit
+                                scelerisque in dictum non consectetur a erat. Egestas congue quisque egestas diam. Vitae
+                                et
+                                leo duis ut diam. Viverra maecenas accumsan lacus vel facilisis volutpat est velit.
+                                Aenean
+                                vel elit scelerisque mauris. Sem et tortor consequat id porta nibh venenatis cras.
+                                Tristique
+                                risus nec feugiat in fermentum posuere urna nec tincidunt. Aenean euismod elementum nisi
+                                quis. Donec ultrices tincidunt arcu non.
+                            </p>
+                            <img class="float-start" src="Images/seminar.png" alt="">
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                incididunt ut
+                                labore et dolore magna aliqua. Semper feugiat nibh sed pulvinar proin. Nullam ac tortor
+                                vitae purus faucibus. Id eu nisl nunc mi ipsum faucibus vitae aliquet nec. Dolor sit
+                                amet
+                                consectetur adipiscing elit ut aliquam purus. Gravida dictum fusce ut placerat orci
+                                nulla
+                                pellentesque dignissim. Hendrerit dolor magna eget est lorem. Vitae congue eu consequat
+                                ac
+                                felis donec et odio. Orci eu lobortis elementum nibh tellus molestie nunc non. Lorem
+                                dolor
+                                sed viverra ipsum nunc aliquet bibendum. Nisl tincidunt eget nullam non. In est ante in
+                                nibh
+                                mauris cursus. Viverra ipsum nunc aliquet bibendum enim facilisis. Convallis a cras
+                                semper
+                                auctor neque. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Odio ut sem
+                                nulla pharetra diam. Sed viverra tellus in hac habitasse platea dictumst vestibulum.
+                                Elit
+                                sed vulputate mi sit amet mauris. Tempus urna et pharetra pharetra massa massa ultricies
+                                mi.
+                                Eleifend mi in nulla posuere sollicitudin aliquam. Congue mauris rhoncus aenean vel elit
+                                scelerisque. Sit amet venenatis urna cursus eget nunc scelerisque viverra mauris. Risus
+                                commodo viverra maecenas accumsan lacus vel. Neque aliquam vestibulum morbi blandit
+                                cursus
+                                risus at ultrices. Fringilla phasellus faucibus scelerisque eleifend. Diam donec
+                                adipiscing
+                                tristique risus nec feugiat in fermentum. Arcu dictum varius duis at. Magna fringilla
+                                urna
+                                porttitor rhoncus dolor purus non enim. In pellentesque massa placerat duis. Aliquet
+                                eget
+                                sit amet tellus cras adipiscing. Quis vel eros donec ac odio tempor. Ut sem viverra
+                                aliquet
+                                eget. Scelerisque mauris pellentesque pulvinar pellentesque. Phasellus egestas tellus
+                                rutrum
+                                tellus pellentesque eu tincidunt.
+                            </p>
                         </div>
 
 
