--- a/events.html
+++ b/events.html
@@ -231,7 +231,7 @@
                                 risus nec feugiat in fermentum posuere urna nec tincidunt. Aenean euismod elementum nisi
                                 quis. Donec ultrices tincidunt arcu non.
                             </p>
-                            <img class="float-start" src="images/Seminar.png" alt="">
+                            <img class="float-start" src="images/Seminar.png" alt="seminar-image">
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                                 incididunt ut
