create another div with the same cta button from the nav and about us section

--- a/events.html
+++ b/events.html
@@ -271,6 +271,14 @@
                             </p>
                         </div>
 
+                        <div class="cta">
+                            <p>
+                                Events are specially designed to educate and inspire. <a class="contact-us about-us-cta"
+                                    href="#contact-form">Contact us</a> to book your farm
+                                tour today!
+                            </p>
+                        </div>
+
 
 
                     </div>
