change href for nav-home and nav-faq

--- a/events.html
+++ b/events.html
@@ -38,10 +38,10 @@
                 <div class="collapse navbar-collapse" id="navbar-content" id="top">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">Home</a>
+                            <a class="nav-link" aria-current="page" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">FAQs</a>
+                            <a class="nav-link" href="faq.html">FAQs</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Events</a>
