--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             <a class="nav-link" href="faq.html">FAQs</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Events</a>
+                            <a class="nav-link" href="events.html">Events</a>
                         </li>
                         <!-- start of dropdown menu -->
                         <li class="nav-item dropdown">
