create new section with an h2 element inside

--- a/contacts.html
+++ b/contacts.html
@@ -82,6 +82,11 @@
         </nav>
 
         <main>
+            <section>
+                <div class="sections-heading">
+                    <h2>Contact <span>Us</span></h2>
+                </div>
+            </section>
             
 
 
