--- a/contacts.html
+++ b/contacts.html
@@ -86,6 +86,10 @@
                 <div class="sections-heading">
                     <h2>Contact <span>Us</span></h2>
                 </div>
+
+                <div class="container row">
+                    
+                </div>
             </section>
             
 
