nest a form and a div element inside the parent div

--- a/contacts.html
+++ b/contacts.html
@@ -88,10 +88,15 @@
                 </div>
 
                 <div class="container row">
-                    
+                    <form id="contact-form row">
+                        <div class="container row">
+                        </div>
+                    </form>
+
+
                 </div>
             </section>
-            
+
 
 
             <div class="push"></div>
