create another div inside

--- a/contacts.html
+++ b/contacts.html
@@ -90,6 +90,10 @@
                 <div class="container row">
                     <form id="contact-form row">
                         <div class="container row">
+                            <div class="col-lg-8 text-start">
+                                
+
+                            </div>
                         </div>
                     </form>
 
