create first row of label elements

--- a/contacts.html
+++ b/contacts.html
@@ -91,6 +91,22 @@
                     <form id="contact-form row">
                         <div class="container row">
                             <div class="col-lg-8 text-start">
+
+                                
+                                <div class="row">
+                                    <div class="col-lg-6 mb-3">
+                                        <label class="form-label" for="name">Name</label>
+                                        <input class="form-control" id="name" type="text" placeholder="Name or Nickname"
+                                            required />
+                                    </div>
+
+
+                                    <div class="col-lg-6 mb-3">
+                                        <label class="form-label" for="email-address">E-mail</label>
+                                        <input class="form-control" id="email-address" type="email"
+                                            placeholder="Email Address" required />
+                                    </div>
+                                </div>
                                 
 
                             </div>
