create second line of label elements

--- a/contacts.html
+++ b/contacts.html
@@ -92,7 +92,7 @@
                         <div class="container row">
                             <div class="col-lg-8 text-start">
 
-                                
+
                                 <div class="row">
                                     <div class="col-lg-6 mb-3">
                                         <label class="form-label" for="name">Name</label>
@@ -105,6 +105,21 @@
                                         <label class="form-label" for="email-address">E-mail</label>
                                         <input class="form-control" id="email-address" type="email"
                                             placeholder="Email Address" required />
+                                    </div>
+                                </div>
+
+                                <div class="row">
+                                    <div class="col-lg-6 mb-3">
+                                        <label class="form-label" for="phone">Phone Number(999-999-9999)</label>
+                                        <input class="form-control" id="phone" type="tel"
+                                            placeholder="12 Digit Mobile Number" pattern="[0-9}{3}-[0-9]{3}-[0-9]{4}"
+                                            required />
+                                    </div>
+
+                                    <div class="col-lg-6 mb-3">
+                                        <label class="form-label" for="msg-category">Brief Description</label>
+                                        <input class="form-control" id="message-category" type="text"
+                                            placeholder="Brief Description" email required />
                                     </div>
                                 </div>
                                 
