create third line of label elements

--- a/contacts.html
+++ b/contacts.html
@@ -122,6 +122,12 @@
                                             placeholder="Brief Description" email required />
                                     </div>
                                 </div>
+
+                                <div class="mb-3">
+                                    <label class="form-label" for="message"></label>
+                                    <textarea class="form-control" id="message" type="text" placeholder="Message"
+                                        style="height: 10rem;" required></textarea>
+                                </div>
                                 
 
                             </div>
