--- a/contacts.html
+++ b/contacts.html
@@ -128,8 +128,11 @@
                                     <textarea class="form-control" id="message" type="text" placeholder="Message"
                                         style="height: 10rem;" required></textarea>
                                 </div>
-                                
 
+                                <div class="d-grid">
+                                    <button class="btn btn-primary btn-lg" type="submit">Submit</button>
+                                </div>
+                                
                             </div>
                         </div>
                     </form>
