add class name container for contacts section and an id:contact-form

--- a/contacts.html
+++ b/contacts.html
@@ -82,7 +82,7 @@
         </nav>
 
         <main>
-            <section>
+            <section class="container" id="contact-form">
                 <div class="sections-heading">
                     <h2>Contact <span>Us</span></h2>
                 </div>
