add another div that will occupy the right side of the page

--- a/contacts.html
+++ b/contacts.html
@@ -134,6 +134,11 @@
                                 </div>
                                 
                             </div>
+
+                            <div class="col-lg-4 office-details text-start">
+
+                            </div>
+                            
                         </div>
                     </form>
 
