--- a/contacts.html
+++ b/contacts.html
@@ -136,9 +136,10 @@
                             </div>
 
                             <div class="col-lg-4 office-details text-start">
+                                <ul class="ul"></ul>
 
                             </div>
-                            
+
                         </div>
                     </form>
 
